# WorldSim3

./: .gitignore  .gitmodules  AGREGATE_VULKAN.md  ARCHITECTURE.md  CMakeLists.txt  DATA.md  DATAFLOW.md  DATA_SOURCES.md  FILES.md  FILTER_FLOW.md  NEW_VISUAL_MODELS.md  PROFESSIONALIZE.md  README.md  REFACTOR.md  SEARCH.md  TESTS.md  TODO.md  UI_HIERARCHY.md  active_queries_tab.cpp  active_queries_tab.h  aggregate_visualization_strategies.cpp  aggregate_visualization_strategies.h  api_control_commands.cpp  api_control_commands.h  app_frame_support.cpp  app_frame_support.h  app_lifecycle.cpp  app_lifecycle.h  app_main_loop.cpp  app_settings.cpp  app_settings.h  app_shutdown_context_builder.cpp  app_shutdown_context_builder.h  app_utils.cpp  app_utils.h  arkavo_connectivity_test.cpp  arkavo_realtime_client.cpp  arkavo_realtime_client.h  arkavo_rtc_session_manager.cpp  arkavo_rtc_session_manager.h  (+255 more)
.github/workflows/: build-artifacts.yml  self-hosted-smoke.yml
cloudflare/: worker-signaling.js
docs/: HOMELESSNESS_LAYERS.md  RUN_LOOP_MIGRATION.md
packaging/linux/: worldsim3.desktop
python_backup/: download_layers.py  download_tiles.py  fetch_public_servants_md.py  generate_hmda_baltimore_tracts.py  generate_parcel_intelligence.py  generate_property_value_parcels.py  generate_simplified_views.py  pull_additional_representations_data.py  pull_government_hierarchy.py  serve_datasets_p2p.py
scripts/: audit_layer_sources.py  build_codemap_rehab_layers.py  build_hud_pit_homelessness_layer.py  build_notice_code_layers.py  build_parcel_matched_event_layers.py  build_regional_parcels.py  build_vacancy_timeseries.py  ci-local.sh  generate_year_built_parcels.py  package-linux.sh  pull_md_dhcd_housing_layers.py
shaders/: heatmap_splat.comp  parcel_fill.frag  parcel_fill.vert
sources/world/earth/nation_state/ng/state_region/anambra/: layers_manifest.repository.json  layers_manifest.runtime.json
sources/world/earth/nation_state/us/state_region/md/: layers_manifest.archival_research.json  layers_manifest.capital_flows.json  layers_manifest.extended_events.json  layers_manifest.heavy_data.json  layers_manifest.historical_high_quality.json  layers_manifest.json  layers_manifest.must_have.json  layers_manifest.nice_to_have.json
tools/: check_file_sizes.sh  check_main_size.sh  duckdb_owner_dump.cpp  hud_pit_layer_builder.cpp  regional_parcel_builder.cpp
web/arkavo/: demo.ts  index.html  realtime-client.ts
